--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Measurement.cs" />
+    <Compile Include="NumberCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SizeGrouper.cs" />
   </ItemGroup>
